fixes scroll issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ form button {
   position:absolute;
   width:100%;
   height:100%;
-  overflow: none;
+  overflow: scroll;
 }
 
 /* Contact Section*/
